--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "url": "https://github.com/danielrobertson/MyDeficitPal/issues"
   },
   "dependencies": {
-    "mfp": "0.5.6"
+    "mfp": "0.5.6",
+    "prompt": "1.0.0"
   },
   "homepage": "https://github.com/danielrobertson/MyDeficitPal#readme"
 }
