--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
   "name": "mydeficitpal",
   "version": "1.0.0",
   "description": "caloric deficit summary tool ",
-  "main": "index.js",
+  "main": "app.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/danielrobertson/MyDeficitPal.git"
   },
   "author": "danielrobertson",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/danielrobertson/MyDeficitPal/issues"
   },
   "dependencies": {
-    "mfp": "0.5.6",
-    "prompt": "1.0.0"
+    "mfp": "0.5.6"
   },
   "homepage": "https://github.com/danielrobertson/MyDeficitPal#readme"
 }
